--- a/src/components/background/style.scss
+++ b/src/components/background/style.scss
@@ -1,20 +1,27 @@
+.disabledBackground {
+    opacity: 0 !important;
+    transform: translateY(-20px) !important;
+}
+
 .background {
     width: 100%;
     height: 100%;
     position: absolute;
     top: 0px;
     left: 0px;
-    z-index: -1;
+    opacity: 1;
+    transform: translateY(0px);
+    transition: 0.3s;
 
     .triangle {
         width: 0px;
         border-top: 170px solid #00fa9a;
         border-left: 105px solid transparent;
         border-right: 105px solid transparent;
-        
+    
         position: absolute;
         right: -70px;
-        top: 80px;
+        top: 100px;
     }
 
     .rectangle {
@@ -23,7 +30,7 @@
         background-color: rgb(59, 89, 255);
 
         position: absolute;
-        bottom: 200px;
+        bottom: 30px;
         right: -30px;
     }
 
@@ -34,7 +41,7 @@
         background-color: #FFD400;
 
         position: absolute;
-        top: 220px;
+        top: 270px;
         left: -40px;
     }
 }
