--- a/src/pages/register/checkbox/style.scss
+++ b/src/pages/register/checkbox/style.scss
@@ -1,14 +1,38 @@
 .RegisterCheckBox {
     width: 100%;
-    height: 130px;
+    height: 50px;
+    margin-top: 10px;
 
     label {
         display: inline-block;
+        cursor: pointer;
         width: 100%;
         height: 100%;
-        background-color: rgb(245, 245, 245);
+        background-color: rgba(245, 245, 245, 0.9);
+        backdrop-filter: blur(5px);
         box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
         border-radius: 20px;
+        text-align: center;
+        line-height: 50px;
+        transition: 0.6s background-color ease-out;
+        -webkit-tap-highlight-color: transparent;
+        
+        h2 {
+            font-size: 20px;
+            img {
+                height: 0px;
+                filter: brightness(500%);
+                transition: 0.4s;
+            }
+        }
+    }
+
+    input:checked + label {
+        background-color: rgba(82, 240, 172, 0.8);
+        img {
+            height: 15px !important;
+            margin-left: 10px;
+        }
     }
 
     input {
