--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -1,10 +1,11 @@
 @import url('./font.scss');
-
+@import url('./trasition.scss');
+@import url('./toast.scss');
 
 * {
     padding: 0px;
     margin: 0px;
-    font-family: Interop, sans-serif;
+    font-family: Interop, sans-serif !important;
     text-rendering: optimizeLegibility;
     letter-spacing: -1px;
 }
@@ -16,11 +17,33 @@
 }
 
 
+html, body {
+    background-color: white;
+}
+
 .AppFrame {
     width: 100vw;
-    height: 100vh;
+    height: -webkit-fill-available;
     position: fixed;
     left: 0px;
     top: 0px;
     max-width: 500px;
+    background-color: white;
+    overflow: hidden;
+}
+
+.defaultFrame {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
+*::-webkit-scrollbar {
+    display: none;
+}
+
+
+div[role="dialog"] {
+    border-radius: 20px !important;
 }
