--- a/src/components/loading/style.scss
+++ b/src/components/loading/style.scss
@@ -9,4 +9,20 @@
     z-index: 1500;
     background-color: white;
     backdrop-filter: blur(5px);
+
+    img {
+        width: 100px;
+        height: 100px;
+        margin-bottom: 20px;
+    }
+
+    h2 {
+        color: rgb(180, 180, 180);
+    }
+}
+
+.LoadingLoading {
+    margin-top: 20vh;
+    width: 80vw;
+    height: 100px;
 }
