--- a/src/pages/boothdetail/video/style.scss
+++ b/src/pages/boothdetail/video/style.scss
@@ -1,4 +1,6 @@
 .DetailVideo {
     width: 100% !important;
-    height: auto !important;
+    height: 200px;
+    position: relative;
+    background-color: rgb(230, 230, 230);
 }
