--- a/src/pages/boothlist/boothitem/style.scss
+++ b/src/pages/boothlist/boothitem/style.scss
@@ -9,6 +9,7 @@
     overflow: hidden;
     cursor: pointer;
     margin-bottom: 20px;
+    position: relative;
 
     .BoothImage {
         width: 100%;
