--- a/src/pages/admin/main/style.scss
+++ b/src/pages/admin/main/style.scss
@@ -10,6 +10,6 @@
     margin-top: 20px;
     border: 0px;
     border-radius: 20px;
-    background-color: rgb(38, 233, 158);
-    color: white;
-}   
+    background-color: rgb(240, 240, 240);
+    color: rgb(0, 100, 255);
+}
