--- a/src/pages/login/style.scss
+++ b/src/pages/login/style.scss
@@ -13,3 +13,18 @@
         color: rgb(100, 100, 100);
     }
 }
+
+.GotoAdminPage {
+    position: fixed;
+    right: 20px;
+    top: 20px;
+    height: 30px;
+    padding: 0px 10px;
+    background-color: rgb(240, 240, 240);
+    border-radius: 100px;
+    font-weight: 600;
+    z-index: 10;
+    font-size: 12px;
+    color: rgb(0, 100, 255);
+    border: 0px;
+}
